--- a/src/app/places/user-places/user-places.component.html
+++ b/src/app/places/user-places/user-places.component.html
@@ -4,7 +4,10 @@
   } @if (error()) {
   <p class="fallback-text">{{ error() }}</p>
   } @if (places()) {
-  <app-places [places]="places()!" />
+  <app-places
+    [places]="places()!"
+    (selectPlace)="onSelectRemovePlace($event)"
+  />
   } @else if (places()?.length === 0) {
   <p class="fallback-text">Unfortunately, no places could be found.</p>
   }
