update: remove optional chaining from else if statement

--- a/src/app/places/user-places/user-places.component.html
+++ b/src/app/places/user-places/user-places.component.html
@@ -8,7 +8,7 @@
     [places]="places()!"
     (selectPlace)="onSelectRemovePlace($event)"
   />
-  } @else if (places()?.length === 0) {
+  } @else if (places().length === 0) {
   <p class="fallback-text">Unfortunately, no places could be found.</p>
   }
 </app-places-container>
